[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit"
version = "0.0.0"
requires-python = ">= 3.8"
authors = [{ name = "Robaire Galliath" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
docs = ["sphinx", "sphinx-autodoc-typehints"]
test = ["pytest", "pyfakefs"]
lint = ["ruff"]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
testpaths = ["test"]
addopts = ["--import-mode=importlib"]
