[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit"
version = "0.1.0"
requires-python = ">=3.8"
authors = [{ name = "Robaire Galliath" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.7.4",
    "pytest>=8.3.3",
    "pyfakefs>=5.7.1",
    "sphinx>=7.1.2",
    "sphinx-autodoc-typehints>=2.0.1",
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
testpaths = ["test"]
addopts = ["--import-mode=importlib", "--cov", "--cov-report=term-missing"]

[tool.coverage]
run.branch = true
run.source = ["orbit", "test"]
html.directory = "coverage"
